# parking-spots

./: .gitignore  CMakeLists.txt  clang_tidy.cmake
includes/: CameraReader.h  CarDetector.h  FrameSaver.h  IDetector.h
src/: CameraReader.cpp  CarDetector.cpp  FrameSaver.cpp  IDetector.cpp  main.cpp
